--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -68,11 +68,10 @@
                 <li>Застосування москалями тактичної ядерної зброї теж не виключене (і на ЗАЕС тривожно). Але то таке,
                     воюватимемо далі. А от західні партнери будуть змушені ще посилити підхід до москалів і зрештою
                     поставити їх на місце.</li>
-              </ul>
 
                 <p>Це основне</p>
 
-            
+            </ul>
         </div>
         <img src="./img/zalugnyi.jpg" alt="Залужний" title="Генерал Залужний">
 
@@ -130,6 +129,10 @@
         </p>
         <img src="./img/ukrSold.jpg" alt="український солдат" title="український солдат">
 
+        <div class="text"> Переходимо до змісту
+            <!-- має бути синім -->
+        </div>
+
         <h4>Зміст</h4>
         <div class="list3">
             <ol>
@@ -144,7 +147,7 @@
 
     </main>
     <footer>
-        <div class="theEnd">Додано, бо вже страшно ритись у коді вище), а треба ще використати +</div>
+        <div class="theEnd">Додано, бо вже страшно чіпати код вище), а треба ще використати +</div>
         <p>-----------------------------------------</p>
         <p>тут треба щось написати (С)</p>
 
