--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -25,7 +25,7 @@
             <h2>В Україні набув чинності Закон "Про внесення змін до деяких законодавчих актів (щодо встановлення
                 кримінальної відповідальності за колабораційну діяльність)" (№2108-ІХ).</h2>
 
-            <img src="../img/zakon.png" alt="Закон">
+            <img src="img/zakon.png" alt="Закон">
 
             <p>
                 Документ опубліковано в офіційному виданні Верховної Ради "Голос України", передає Укрінформ.
