--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -96,7 +96,7 @@
             </p>
         </div>
         <div class="Larsseit500">
-            <h5> Добровільне <span> зайняття</span> громадянином України посади в незаконних
+            <h5> Добровільне <span> зайняття</span> громадянином України посади в <span class="next2">незаконних</span>
                 судових або
                 <span>правоохоронних</span> органах,
 
@@ -119,7 +119,7 @@
                 або ухвалення рішень, які призвели до загибелі людей чи настання інших тяжких наслідків, карається
                 позбавленням волі на строк <span> від 15 років </span> або довічним позбавленням волі з позбавленням
                 права обіймати
-                певні посади чи займатися певною діяльністю строком <span id="red"> від 10 до 15 років </span> та з
+                певні посади чи займатися певною діяльністю строком <span id="ind"> від 10 до 15 років </span> та з
                 конфіскацією майна або без
                 такої.
             </p>
